<resources>
    <string name="app_name">Hybrid Client Testing Application</string>
    <string name="users_activity_name">Show clients activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_conf">Konfigurace aplikace</string>
    <string name="menu_func">Vzorová funkcionalita</string>

    <string name="radio_thin">Tenký klient</string>
    <string name="radio_hybrid_offline">Hybridní klient s možností offline režimu</string>
    <string name="radio_hybrid_p2p">Hybridní klient s možností poskytnutí služby skrze p2p komunikaci</string>
    
    <string name="btn_getFat_offline">Ztloustnout - offline režim</string>
    <string name="btn_getFat_p2p_server">Ztloustnout - peer-to-peer komunikace v roli serveru</string>
    <string name="btn_getFat_p2p_client">Ztloustnout - peer-to-peer komunikace v roli klienta</string>
    <string name="btn_slim">Zhubnout - tenký klient</string>
    <string name="btn_show_clients">Zobrazit seznam klientů</string>
    <string name="btn_show_map">Zobrazit mapu</string>

    <string name="txt_conf">Nastavení konfigurace aplikace</string>
    <string name="txt_conf_manual_conf">Vynucené akce uživatelem:</string>
    <string name="txt_conf_state">Aktuální stav aplikace:</string>
    <string name="txt_conf_state_to_set">Tenký klient</string>
    <string name="txt_users">Seznam klientů</string>
    <string name="txt_users_table_userID">SSID klienta</string>
    <string name="txt_users_table_latitude">Zeměpisná šířka</string>
    <string name="txt_users_table_longitude">Zeměpisná délka</string>
    <string name="txt_users_table_is_online">Připojen k serveru</string>
    <string name="txt_users_table_actual_state">Aktuální stav</string>
    <string name="txt_users_table_future_state">Možný stav</string>
    <string name="txt_users_table_first_conn">1. připojení k serveru</string>
    <string name="txt_users_table_last_conn">Poslední připojení k serveru</string>
    <string name="txt_users_table_temperature">teplota vzduchu</string>
    <string name="txt_users_table_pressure">tlak vzduchu</string>
    <string name="txt_func_sensors_main">Hodnoty ze senzorů:</string>
    <string name="txt_func_sensors_temperature">Teplotní senzor:</string>
    <string name="txt_func_sensors_pressure">Tlakový senzor:</string>
    <string name="txt_func_temperature_value">Hodnota teplotního senzoru</string>
    <string name="txt_func_pressure_value">Hodnota tlakového senzoru</string>
    <string name="txt_func_show_map">Zobrazit mapu s hodnotami ostatních uživatelů</string>
    <string name="txt_conf_state_offline_mode">Tlustý klient s offline režimem</string>
    <string name="txt_conf_state_p2p_server">Tlustý klient s peer-to-peer režimem v roli serveru</string>
    <string name="txt_conf_state_p2p_client">Tlustý klient s peer-to-peer režimem v roli klienta</string>
    <string name="txt_user_no_client">Žádný klient k zobrazení</string>

    <string name="switch_func">Zapnout/Vypnout:</string>

    <string name="sh_pref_file_key">uhk.fim.thesis.hybridClient.appContext</string>
    <string name="sh_pref_ssid">app_id</string>
    <string name="sh_pref_app_state">app_state</string>
    <string name="sh_pref_libraries">libraries</string>
    
    <string name="receive_clients_from_p2plibrary_action_name">cz.fim.uhk.thesis.hybridClient.receiveClientsAction</string>
    <string name="receive_clients_from_p2plibrary_extra_name">cz.uhk.fim.thesis.hybridClient.receivedClients</string>
    <string name="receive_client_info_from_p2plibrary_action_name">cz.fim.uhk.thesis.hybridClient.receiveClientInfoAction</string>
    <string name="receive_client_info_from_p2plibrary_extra_name">cz.uhk.fim.thesis.hybridClient.receivedClientInfo</string>

</resources>
