<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_conf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup_conf"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_marginStart="205dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="207dp"
        android:layout_marginBottom="580dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radio_thin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_thin" />

        <RadioButton
            android:id="@+id/radio_hybrid_offline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_hybrid_offline" />

        <RadioButton
            android:id="@+id/radio_hybrid_p2p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_hybrid_p2p" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_getFat_offline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="342dp"
        android:text="@string/btn_getFat_offline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_conf" />

    <Button
        android:id="@+id/btn_getFat_p2p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="262dp"
        android:text="@string/btn_getFat_p2p"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_getFat_offline" />

    <Button
        android:id="@+id/btn_slim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="182dp"
        android:text="@string/btn_slim"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_getFat_p2p" />

    <Button
        android:id="@+id/btn_show_clients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="97dp"
        android:text="@string/btn_show_clients"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_slim" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="163dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="189dp"
        android:layout_marginBottom="19dp"
        android:text="@string/txt_conf_manual_conf"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_getFat_offline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_conf" />

</androidx.constraintlayout.widget.ConstraintLayout>